--- a/service.yaml
+++ b/service.yaml
@@ -19,3 +19,15 @@ spec:
           image: shivchalla/my-vite-app:latest
           ports:
             - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-vite-app-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: my-vite-app
+  ports:
+    - port: 80
+      targetPort: 80
